Updated My Profile: Identification Component 	- Fixed bug where if the image received did not have the same width and height lengths, the image would appear stretched out. Now, no matter whether the width or height is, the image will always cover the whole frame as best as it can while maintaining the same aspect ratio

--- a/src/components/Identification/index.scss
+++ b/src/components/Identification/index.scss
@@ -143,6 +143,7 @@ $image-side-width-desktop: 90px;
                 &-image {
                   width: $image-main-width-desktop;
                   height: $image-main-height-desktop;
+                  object-fit: cover;
                 }
                 &-tile-bar {
                   position: absolute;
@@ -185,6 +186,7 @@ $image-side-width-desktop: 90px;
                 border-radius: $image-border-radius;
                 width: $image-side-width-desktop;
                 height: $image-side-height-desktop;
+                object-fit: cover;
               }
               &-button {
                 position: absolute;
